fix: layout of footer on smaller screens

--- a/assets/css/components/footer.css
+++ b/assets/css/components/footer.css
@@ -23,7 +23,7 @@
     gap: 1rem;
     padding: 1.5rem 2rem;
 
-    @media (--screen-sm) {
+    @media (--screen-md) {
       flex-direction: row;
       align-items: flex-start;
       justify-content: space-between;
@@ -39,7 +39,7 @@
       gap: 1rem 2rem;
 
       @media (--screen-md) {
-        gap: 0.5rem 1rem;
+        gap: 0.25rem 1rem;
       }
 
       a {
@@ -56,7 +56,7 @@
     }
 
     > .right {
-      @media (--screen-sm) {
+      @media (--screen-md) {
         justify-content: flex-end;
       }
     }
